applications/tts/tts.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tts
  namespace: tts
spec:
  revisionHistoryLimit: 3
  replicas: 1
  selector:
    matchLabels:
      app: tts
  template:
    metadata:
      labels:
        app: tts
    spec:
      containers:
        - name: tts
          image: ghcr.io/jspaulsen/tts:main
          imagePullPolicy: Always
          ports:
            - containerPort: 8081
          livenessProbe:
            httpGet:
              path: /health
              port: 8081
            initialDelaySeconds: 30
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /health
              port: 8081
            initialDelaySeconds: 5
            periodSeconds: 5
          volumeMounts:
            - name: tts-models
              mountPath: /app/.cache/huggingface
      volumes:
        - name: tts-models
          persistentVolumeClaim:
            claimName: tts-models
---
apiVersion: v1
kind: Service
metadata:
  name: tts
  namespace: tts
spec:
  selector:
    app: tts
  ports:
    - port: 80
      targetPort: 8081
